[package]
name = "logw"
description = "Logger wrapper for tracing crate"
version = "0.0.0-rc2"
edition = "2021"
authors = ["Sebastijan KelneriÄ <sebastijan.kelneric@vichava.com>"]
publish = ["vichava"]

[features]
application = ["dep:tracing-subscriber"]

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features=["env-filter", "json"], optional = true }